[ JavaScript ] - Maniouladores de eventos do DOM - parte 2

--- a/Book_Javascript_guiaDefinitivo/ManipulandoEventosComJavascript/ManipulandoEventosComJavascript.html
+++ b/Book_Javascript_guiaDefinitivo/ManipulandoEventosComJavascript/ManipulandoEventosComJavascript.html
@@ -23,7 +23,7 @@
                 text-align: center;
                 flex-direction: column;
             }
-            .class-button {
+            button {
                 max-width: 10em;
                 text-align: center;
                 margin-top: 50px;
@@ -41,11 +41,20 @@
     </head>
     <body>
         <div class="container">
+            <h2>Manipulando eventos no DOM - nivel 0</h2>
+            <div class="class-button">
+                <button>Clique aqui</button>
+            </div>
+
             <!-- Evento -->
-            <h1>Manipulando Eventos com Javascript</h1>
+            <!--
+                <h1>Manipulando Eventos com Javascript</h1>
             <button class="class-button" onclick="acionarAlert('Olá Mundo!')">
                 Clique aqui
             </button>
+             -->
+
+            <!-- <script src="./ManipulandoEventosComJavascript.js"></script> -->
         </div>
     </body>
 </html>
